Create CsrDashboard api
